# totalseg-muscle-tool

./: .gitignore  AI肌肉分割.bat  PROJECT_MEMORY.md  README.md  START 啟動.bat  手動vs AI比較.bat
.github/workflows/: build-windows.yml
python/: auto_draw_cmd.py  batch_gui.py  batch_seg.py  compare_gui.py  draw.py  gui_main.py  gui_pyside.py  mock_seg.py  pyproject.toml  seg.py  start.py  test_compare.py
python/tests/: conftest.py  test_auto_draw_cmd.py
