[project]
name = "calculate-muscle-areas"
version = "0.1.0"
description = "Muscle Area Calculator using TotalSegmentator"
requires-python = ">=3.10,<3.11"
dependencies = [
    "nibabel>=5.3.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "simpleitk>=2.5.2",
    "totalsegmentator>=2.11.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "rt-utils>=1.2.7",
    "fury>=0.12.0",
    "slicerio>=0.3.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
